Bug 85303 - SLIDESHOW: cannot start show at selected slide after having changed range
Summary: SLIDESHOW: cannot start show at selected slide after having changed range
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.2.1 release
Hardware: Other All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:5.1.0 target:5.0.3
Keywords:
: 89752 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-21 20:44 UTC by Julien Nabet
Modified: 2016-10-25 19:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
test presentation (12.50 KB, application/vnd.oasis.opendocument.presentation)
2015-06-06 20:01 UTC, ivana.bosnic
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2014-10-21 20:44:13 UTC
Following fdo#76953 which is now fixed, the problem is now that after having changed range, even if we disable the option, we can't start show at selected slide but at first one.

Steps to reproduce this:
- create a odp file with 5 slides
- menu Slide Show/Slide Show Settings/From then select Slide 2

Go to Slide 3, then Shift-F5, it starts to Slide 2, it's normal.

Then go back to menu Slide Show/Slide Show Settings/From then select All (Slide 2 in From part is now disabled)
Go to Slide 3 again, then Shift-F5, it starts again to Slide 2 instead of Slide 3, KO.
Comment 1 A (Andy) 2014-10-23 19:16:01 UTC
for me not reproducible with LO 4.3.2.2 (Win 8.1)
Comment 2 Buovjaga 2014-10-24 19:10:27 UTC
I can repro on Win 7 64-bit.

Version: 4.4.0.0.alpha1+
Build ID: 0a82645c360158f9cc0fdabe2a52f1ff8f981bed
TinderBox: Win-x86@39, Branch:master, Time: 2014-10-24_06:59:23
Comment 3 ivana.bosnic 2015-06-06 20:01:11 UTC
Created attachment 116335 [details]
test presentation
Comment 4 ivana.bosnic 2015-06-06 20:04:29 UTC
I have the same problem, after using the option of Custom slide show for some time. This one still works, but if I return to All slides, the option "Start from current slide" always starts from slide #1.

A small test case is attached. 

Version: 4.4.1.2, WinXP
Comment 5 Julien Nabet 2015-09-01 20:48:30 UTC
*** Bug 89752 has been marked as a duplicate of this bug. ***
Comment 6 Julien Nabet 2015-09-01 21:01:10 UTC
In fact, as soon as you click "OK" in Slide Show Settings, it'll use the slide in From select box.
Eg:
- Go to slide 4
- menu Slide Show/Slide Show Settings
- just click "Ok" (so "All" option is still selected)

Then go to slide 2 and try Shift-F5, it'll start to slide 4.

Of course, if you click "Cancel" instead of "Ok" it doesn't take the slide into account.

I submitted a patch to review here:
https://gerrit.libreoffice.org/#/c/18253/
With it I don't reproduce this buggy behaviour, I hope it's the right way to fix this.
Comment 7 Commit Notification 2015-09-03 11:09:41 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db9f846abfc683c622375191edb6ae9bf348f6e7

tdf#85303: SLIDESHOW cannot start at selected slide sometimes

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2015-09-03 12:17:52 UTC
backport to 5.0 branch in review here: https://gerrit.libreoffice.org/#/c/18298/
Comment 9 Commit Notification 2015-09-11 07:45:57 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b269b86cc39c65982c269b469ab30195f9d675b1&h=libreoffice-5-0

tdf#85303: SLIDESHOW cannot start at selected slide sometimes

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.