tdf#85303: SLIDESHOW cannot start at selected slide sometimes

When Slide Show/Slide Show Settings is selected and Ok button is clicked
the slide from "From" list box is stored in maPresPage and the fact that
this var is not empty makes slideshow considers it must be used.

So 2 things must be done:
1) Check first if "All Slides" has been selected
In this case, don't read slide from "From" in next block (ATTR_PRESENT_DIANAME)
and so let maPresPage empty
2) Empty maPresPage if "All Slides" has been selected to remove
any existing value

Change-Id: I6042ae2db6260e1f441a1c9db90f5de6de966f2a